@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2023-07-15T00:45:50Z",
+  "timestamp" : "2023-07-15T08:09:24Z",
   "count_outdated" : 1264,
   "uniques_outdated" : 676,
-  "count" : 1282,
-  "uniques" : 687,
+  "count" : 1283,
+  "uniques" : 688,
   "clones" : [
     {
       "timestamp": "2023-07-01T00:00:00Z",
@@ -82,6 +82,15 @@
       "count": 2,
       "count_minmax": [ 1, 2 ],
       "count_decinc": [ 0, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2023-07-15T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
